# androidqf

./: .gitignore  .goreleaser.yaml  Dockerfile  Makefile  README.md  build_locally.sh  go.mod  go.sum  main.go
acquisition/: acquisition.go  acquisition_test.go  apks.go  backup.go  dumpsys.go  encrypted_stream.go  encrypted_stream_test.go  env.go  files.go  getprop.go  key.go  key_test.go  logcat.go  logs.go  processes.go  secure.go  services.go  settings.go  streaming_buffer.go  streaming_buffer_test.go  streaming_zip.go  streaming_zip_test.go
adb/: adb.go  adb_darwin.go  adb_linux.go  adb_unbundle.go  adb_windows.go  collector.go  files.go  packages.go  version.go  version_test.go  version_unbundle_test.go
android-collector/: LICENSE  Makefile  README.md  go.mod  go.sum  main.go
android-collector-rs/: Cargo.toml  README.md
android-collector-rs/src/: cmd.rs  cmd_help.rs  main.rs
android-collector-rs/src/files/: mod.rs  scandir.rs  scandir_result.rs
android-collector-rs/src/helper/: direntry.rs  filter.rs  mod.rs  options.rs
android-collector-rs/src/process/: mod.rs
android-collector-rs/src/yara/: mod.rs  scan.rs  scan_result.rs
assets/: assets.go  assets_bundled.go  assets_darwin.go  assets_linux.go  assets_system.go  assets_windows.go
cmd/: main.go
log/: logger.go
modules/: backup.go  bugreport.go  bugreport_test.go  dumpsys.go  env.go  files.go  getprop.go  intrusion_logs.go  logcat.go  logs.go  modules.go  mounts.go  packages.go  packages_test.go  paths.go  paths_test.go  processes.go  root_binaries.go  selinux.go  services.go  settings.go  (+2 more)
(+9 files in other folders)
